syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_inferred.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<InferredType>(::quote::quote! { _ })"
---
Ok(
    (
        FIdent(
            Ident(
                _,
            ),
        ),
        0,
    ),
)
