syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_never.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<NeverType>(::quote::quote! { ! })"
---
Ok(
    (
        FPunct,
        0,
    ),
)
