syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_paren_type.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<ParenthesizedType<Infallible>>(::quote::quote! { u16 })"
---
Err(
    InvalidToken(
        Ident {
            sym: u16,
        },
    ),
)
