syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_raw_pointer_type_mut.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<RawPointerType<Ident>>(::quote::quote! { * mut hello })"
---
Ok(
    (
        Mut(
            Ident(
                hello,
            ),
        ),
        0,
    ),
)
