syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_reference.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<ReferenceType<Infallible>>(::quote::quote! { & hello })"
---
Ok(
    (
        ReferenceType {
            is_mut: false,
            inner: TypePath(
                TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    hello,
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
        0,
    ),
)
