syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_reference_mut.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<ReferenceType<Infallible>>(::quote::quote! { & mut hello })"
---
Ok(
    (
        ReferenceType {
            is_mut: true,
            inner: TypePath(
                TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    hello,
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
        0,
    ),
)
